<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentInicio"
        android:icon="@mipmap/ic_inicio_foreground"
        android:title="@string/inicio" />
    <item
        android:id="@+id/fragmentLaboratorios"
        android:icon="@mipmap/ic_lab_foreground"
        android:title="@string/labs" />
    <item
        android:id="@+id/fragmentReportes"
        android:icon="@mipmap/ic_reporte_foreground"
        android:title="@string/reportes" />
    <item
        android:id="@+id/fragmentAviso"
        android:icon="@mipmap/ic_aviso_foreground"
        android:title="@string/aviso" />
    <item
        android:id="@+id/fragmentMas"
        android:icon="@mipmap/ic_menu_foreground"
        android:title="@string/mas" />
</menu>