<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.FragmentMas">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagen_perfil"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContainer_perfil_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            app:layout_constraintTop_toBottomOf="@+id/imgProfile"
            tools:layout_editor_absoluteX="-2dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContainer_perfil_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContainer_perfil_nombre">

        <TextView
            android:id="@+id/txtPerfil_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogout"
        style="?attr/materialButtonStyle"
        android:text="@string/logout"
        android:textSize="14sp"
        app:strokeColor="@color/gris"
        app:icon="@android:drawable/ic_menu_set_as"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContainer_perfil_usuario"
        />
</androidx.constraintlayout.widget.ConstraintLayout>