<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FragmentReportes">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtOpciones_lab_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/laboratorios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/txtOpciones_lab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            app:simpleItems="@array/labs"
            android:labelFor="@+id/txtOpciones_lab"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtReporte_problema_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/problema"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOpciones_lab_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtReporte_problema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtReporte_descripcion_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/descripcion"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReporte_problema_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtReporte_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            app:counterEnabled="true"
            android:singleLine="true"
            app:counterMaxLength="5"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnReportar"
        style="?attr/materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"

        android:text="@string/reportar"
        android:textAlignment="center"
        android:textSize="18sp"
        app:icon="@mipmap/ic_reporte_foreground"



        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReporte_descripcion_container"
        />
</androidx.constraintlayout.widget.ConstraintLayout>